--- a/neshchadin/1/author.html
+++ b/neshchadin/1/author.html
@@ -12,24 +12,24 @@
         <div class="wrapper">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="/">Главная</a>
+                    <a href="/1">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/table.html">Таблица</a>
+                    <a href="table.html">Таблица</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/form.html">Форма</a>
+                    <a href="form.html">Форма</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/author.html">Автор</a>
+                    <a href="author.html">Автор</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/images.html">Картинки</a>
+                    <a href="images.html">Картинки</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="page-header" style="background-image: url('../images/antoine-barres.jpg')">
+    <div class="page-header" style="background-image: url('images/antoine-barres.jpg')">
         <div class="mask">
         </div>
         <div class="author">
