--- a/neshchadin/1/table.html
+++ b/neshchadin/1/table.html
@@ -12,19 +12,19 @@
         <div class="wrapper">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="/">Главная</a>
+                    <a href="/1">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/table.html">Таблица</a>
+                    <a href="table.html">Таблица</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/form.html">Форма</a>
+                    <a href="form.html">Форма</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/author.html">Автор</a>
+                    <a href="author.html">Автор</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/images.html">Картинки</a>
+                    <a href="images.html">Картинки</a>
                 </li>
             </ul>
         </div>
