--- a/Лебедев/3/exam.html
+++ b/Лебедев/3/exam.html
@@ -11,6 +11,11 @@
     <div class="menu">
         <h3>Навигация</h3>
         <a href="index.html">Главная</a>
+        <a href="curr.html">Текущая дата</a>
+        <a href="exam.html">До экзамена</a>
+        <a href="color.html">Фон</a>
+        <a href="img.html">Картинки</a>
+        <a href="numbers.html">Сумма</a>
     </div>
     <div class="container">
         <h1>Лабораторная работа №3</h1>
