--- a/Лебедев/3/numbers.html
+++ b/Лебедев/3/numbers.html
@@ -11,6 +11,11 @@
     <div class="menu">
         <h3>Навигация</h3>
         <a href="index.html">Главная</a>
+        <a href="curr.html">Текущая дата</a>
+        <a href="exam.html">До экзамена</a>
+        <a href="color.html">Фон</a>
+        <a href="img.html">Картинки</a>
+        <a href="numbers.html">Сумма</a>
     </div>
     <div class="container">
         <h1>Лабораторная работа №3</h1>
@@ -34,7 +39,7 @@
             var a = parseInt(document.getElementById('first').value);
             var b = parseInt(document.getElementById('second').value);
     
-            if (!a || !b) {
+            if ((a != 0 && !a) || (b != 0 && !b)) {
                 result.innerHTML = "Ошибка!"
             } else {
                 result.innerHTML = a + b;
