--- a/Ezhov/Lab1/images.html
+++ b/Ezhov/Lab1/images.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+    <link href="css/allcss.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&amp;subset=cyrillic" rel="stylesheet" type="text/css">
+
+    <title>Картинки</title>
 </head>
 <body>
-    <img class="main-list" src="img/Anoft.jpg"/>
+    <img class="main-img" src="img/1.jpg" />
 </body>
 </html>
