--- a/Ezhov/Lab1/lists.html
+++ b/Ezhov/Lab1/lists.html
@@ -22,9 +22,9 @@
                     </ol>
                 </li>
                     <li><a href="lists.html">Многоуровневые нумерованные и ненумерованные списки</a></li>
-                    <li><a href="vk.com">Таблицы</a></li>
-                    <li><a href="vk.com">Изображения</a></li>
-                    <li><a href="vk.com">Формы (input с различными вариациями атрибута type)</a></li>
+                    <li><a href="tables.html">Таблицы</a></li>
+                    <li><a href="images.html">Изображения</a></li>
+                    <li><a href="inputs.html">Формы (input с различными вариациями атрибута type)</a></li>
                 </ul>
     </div>
 </body>
