--- a/Лебедев/1/imgs.html
+++ b/Лебедев/1/imgs.html
@@ -17,7 +17,7 @@
         <a href="form.html">Формы</a>
     </div>
     <div class="container">
-        <h1 class="text-center">Изоюражения</h1>
+        <h1 class="text-center">Изображения</h1>
         <h2>Картинки по запросу: большой барьерный риф</h2>
         <div class="img__wrap">
             <img src="images/1.jpg" alt="1">
